Dont allow dropping of C4, avoid PostRoundPopup clipping with tabmenu, modify win text

--- a/code/UI/General/PostRoundPopup/PostRoundPopup.scss
+++ b/code/UI/General/PostRoundPopup/PostRoundPopup.scss
@@ -13,7 +13,7 @@ PostRoundPopup
     .background-banner
     {
         position: absolute;
-        top: 100px;
+        top: 82px;
         width: 100%;
         height: 150px;
         justify-content: center;
